# Parallel_Computing

./: grph.h  my_original_boruvka.cpp
Bor_AL/: Boruvka.c  Boruvka_merge.c  MST.c  merge.c  merge_arr.c
MST_CC/: Bor_FAL.cpp  CMakeLists.txt  GraphC.txt  Graphall.txt  Graphdiff.txt  Insert_Delete_ConC.hpp  Insert_Delete_MST.hpp  Instructions  Makefile  SP_structure.hpp  a.out  append.cpp  boruvka.cpp  btest.cpp  cE.out  create_edgelist.cpp  create_tree.hpp  kurskal_MST.hpp  main_code1x.cpp  modifyWT.hpp  readin_data.hpp  rewire.hpp  tEx.out  traversalEx.cpp  tree_info.hpp
MST_CC/a.out.dSYM/Contents/Resources/DWARF/: a.out
MST_CC/cE.out.dSYM/Contents/Resources/DWARF/: cE.out
MST_CC/data/: changedXCOND  changedXCONDS  changedXCondMAT  changedXCondMATS  changedca-GrQc  changedca-GrQcS  changedctrlS  changedkarate  changedkarateS  changedtest_graph  changedwiki  changedwikiS  test_graph
MST_CC/tEx.out.dSYM/Contents/: Info.plist
MST_CC/tEx.out.dSYM/Contents/Resources/DWARF/: tEx.out
